--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,16 @@ body {
     padding-bottom: 20px;
 }
 
-.header {
-    margin: 0;
-    padding: 0;
+header {
     height: 46px;
-    display: block;
-    background-image: url(../images/logo.gif);
-    background-repeat: no-repeat;
-    background-position: left center;
-
+    margin: 0 0 20px;
+    background: url(../images/logo.gif) no-repeat left center;
     border-bottom: 1px solid #e5e5e5;
-    margin-bottom: 20px;
 }
 
-.badge {
+header a {
     float: right;
-    margin-top: 15px;
-}
-
-#timestamp {
-    float: right;
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
 a,
@@ -35,7 +24,6 @@ a:focus {
     color: #000;
     text-decoration: none;
 }
-
 
 ul > li > a.btn {
     float: right;
@@ -50,13 +38,13 @@ div > ul > li > ul {
 ul > li > a > div > div:nth-child(1) {
     font-weight: bold;
     font-size: 16px;
-    padding-right: 0px;
+    padding-right: 0;
 }
 ul > li > a > div > div:nth-child(2),
 ul > li > a > div > div:nth-child(3) {
     font-size: 13px;
     margin-top: 3px;
-    padding-right: 0px;
+    padding-right: 0;
 }
 
 .panel-default {
@@ -65,7 +53,7 @@ ul > li > a > div > div:nth-child(3) {
 .panel-default > .panel-heading {
     border-radius: 2px;
     background-image: linear-gradient(to bottom,#6C6C6C 0,#000 100%);
-        color: #FFF;
+    color: #FFF;
 }
 .panel-default > .panel-heading > a,
 .panel-default > .panel-heading > a:hover,
@@ -74,17 +62,22 @@ ul > li > a > div > div:nth-child(3) {
 }
 
 .list-group {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     -webkit-box-shadow: none;
 }
 
 .table {
-    margin-bottom: 0px;
+    margin-bottom: 0;
+}
+
+#timestamp {
+    float: right;
+    padding-top: 5px;
 }
 
 #collapsePrice > li > div[id*=collapse] {
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 #collapseMember > a > span {
@@ -94,8 +87,8 @@ ul > li > a > div > div:nth-child(3) {
     font-size: 10px;
 }
 
-body > footer > p {
+footer {
+    margin-top: 15px;
     text-align: center;
     font-size: 12px;
-    margin-top: 15px;
 }
