--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ ul > li > a > div > div:nth-child(1) {
     font-size: 16px;
     padding-right: 0;
 }
+ul > li > a > div > span,
 ul > li > a > div > div:nth-child(2),
 ul > li > a > div > div:nth-child(3) {
     font-size: 13px;
