--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,10 @@ ul > li > a > div > div:nth-child(3) {
 }
 .panel-default > .panel-heading {
     border-radius: 2px;
-    background-image: linear-gradient(to bottom,#6C6C6C 0,#000 100%);
     color: #FFF;
+    background-image: linear-gradient(to bottom,#6C6C6C, #000);
+    background-image: -moz-linear-gradient(top, #6C6C6C, #000);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#6C6C6C), to(#000));
 }
 .panel-default > .panel-heading > a,
 .panel-default > .panel-heading > a:hover,
@@ -64,7 +66,7 @@ ul > li > a > div > div:nth-child(3) {
 
 .list-group {
     margin-bottom: 0;
-    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 
 .table {
